--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*::selection{
+  color: black;
+  background-color: yellow;
+}
 body,html {
     width: 100%;
     height: 100%;
@@ -8,6 +12,7 @@ body,html {
     -o-background-size: cover;
     background-size: cover;
   }
+
   
   h1{
     font-size: 3rem;
@@ -44,3 +49,4 @@ body,html {
   .btn-xl {
     padding: 1rem 2rem;
   }
+  
